# lcg

./: CMakeLists.txt  README.md  README.md.bck  main.cpp  test_gram_functions.cpp
curr_gram_imp/include/: common.h  hashing.h
data/: bwt_test.txt  dummy.txt  plain_reads_sorted
include/: build_collage_system.h  build_lc_grammar.hpp  build_lc_grammar_rand.hpp  common.h  compact_gram.h  create_dict.h  create_dict_full_scan.h  edit_algorithms.h  edit_gram.h  ext_gram.h  grammar.h  grammar_algorithms.h  hashing.h  lc_parsing.h  logger.h  merge_grams.h  parse_text.h  parsing_strategies.h  partial_gram.h  pred_dt.h  process_text.h  rmq.h  text_handler.h
include/build_gram/: collapse_gram.h  fastx_parser.h  lc_parsing.h  phrase_set.h  phrase_set_vbyte.h  plain_gram.h  text_handler.h
include/cds/: bitstream.h  cdt_common.hpp  int_array.h  memory_handler.hpp  mmap_allocator.h  ts_priority_queue.h  ts_queue.h  ts_string_map.h  utils.h  vbyte.h  vbyte_encoding.h
include/lz-like-build-strat/: buff_vector.h  lc_parsing.h  lz_like_map.h  partial_gram.h  text_handler.h
include/lz-like-par-strat/: lz_like_map.h  partial_gram.h  text_handler.h
include/lz-like-strategy/: lc_parsing.h  lz_like_map.h  lz_map.h  partial_gram.h  special_allocator.h  text_handler.h
include/parsers/: local_minima_parser.hpp
include/se-build-strat/: create_dict_full_scan.h  gram_buffer.h  local_minima_parser.hpp  parse_text.h  text_handler.h
include/se-par-strat/: gram_buffer.h  lc_parsing.h  local_minima_parser.hpp  parse_text.h  parsing_opts.h
include/semi-external-strategy/: create_dict.h  lc_parsing.h  parse_text.h  parsing_strategies.h  text_handler.h
lib/: build_lc_grammar.cpp  build_lc_grammar_rand.cpp  utils.cpp
old/: build_collage_system.h  create_dict.h  parsing_strategies.h  sorting_strings.h  test_gram_functions.cpp
old/include/: grammar.h
old/lib/: build_lc_grammar.cpp
old/old/: build_lc_grammar.hpp  parsing_strategies.h
old/se-build-strat/: gram_buffer.h  local_minima_parser.hpp  parse_text.h  text_handler.h
